# uni-web

./: Cargo.toml  package-lock.json  tailwind.config.js
src/: handlers.rs  main.rs
ui/: about.html  header.html  main.html  tasks.html
ui/css/: input.css  output.css
